--- a/projects/vs/sonia-prime/sonia-prime.vcxproj
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj
@@ -61,6 +61,7 @@
     <ClCompile Include="..\..\..\sonia\services\service_locator.cpp" />
     <ClCompile Include="..\..\..\sonia\services\transceiver\transceiver_builder.cpp" />
     <ClCompile Include="..\..\..\sonia\services\transceiver\transceiver_service.cpp" />
+    <ClCompile Include="..\..\..\sonia\utility\invokation\invokation.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\sonia-prime-lib\sonia-prime-lib.vcxproj">
@@ -130,6 +131,7 @@
     <ClInclude Include="..\..\..\sonia\services\transceiver\transceiver_configuration.hpp" />
     <ClInclude Include="..\..\..\sonia\services\transceiver\transceiver_service.hpp" />
     <ClInclude Include="..\..\..\sonia\services\type_registry.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\invokation\invokation.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
