--- a/projects/cmake/sonia-prime/CMakeLists.txt
+++ b/projects/cmake/sonia-prime/CMakeLists.txt
@@ -22,6 +22,8 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/services/scheduler/scheduler_service.cpp
     ${BUNDLE_HOME}/sonia/services/auth/auth_service_builder.cpp
     ${BUNDLE_HOME}/sonia/services/auth/auth_service.cpp
+    ${BUNDLE_HOME}/sonia/services/tenger/tenger_service.cpp
+    ${BUNDLE_HOME}/sonia/services/tenger/tenger_service_builder.cpp
     ${BUNDLE_HOME}/sonia/services/prime_bundle.cpp
     ${BUNDLE_HOME}/sonia/utility/invokation/invokation.cpp
 )
