--- a/projects/vs/sonia-prime/sonia-prime.vcxproj.filters
+++ b/projects/vs/sonia-prime/sonia-prime.vcxproj.filters
@@ -113,6 +113,12 @@
     <ClCompile Include="..\..\..\sonia\utility\invokation\invokation.cpp">
       <Filter>sonia.utility.invokation</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\sonia\services\tenger\tenger_service_builder.cpp">
+      <Filter>sonia.services\tenger</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\services\tenger\tenger_service.cpp">
+      <Filter>sonia.services\tenger</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="sonia.services">
@@ -153,6 +159,9 @@
     </Filter>
     <Filter Include="sonia.utility.invokation">
       <UniqueIdentifier>{65222d1f-e832-4541-bd15-d57c45118524}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="sonia.services\tenger">
+      <UniqueIdentifier>{8eb15461-de06-40b4-9256-b06104b93097}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -344,6 +353,15 @@
     </ClInclude>
     <ClInclude Include="..\..\..\sonia\utility\invokation\invokation.hpp">
       <Filter>sonia.utility.invokation</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\tenger\tenger_service_configuration.hpp">
+      <Filter>sonia.services\tenger</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\tenger\tenger_service_builder.hpp">
+      <Filter>sonia.services\tenger</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\sonia\services\tenger\tenger_service.hpp">
+      <Filter>sonia.services\tenger</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
