+variant (aka blob_result) lua support. (first approach)

--- a/projects/cmake/sonia-prime-lib/CMakeLists.txt
+++ b/projects/cmake/sonia-prime-lib/CMakeLists.txt
@@ -33,6 +33,7 @@ set (BUNDLE_SOURCES
     ${BUNDLE_HOME}/sonia/utility/iterators/archive_extract_iterator.cpp
     ${BUNDLE_HOME}/sonia/utility/number/number_math.cpp
     ${BUNDLE_HOME}/sonia/utility/lua/lua.cpp
+    ${BUNDLE_HOME}/sonia/utility/lua/variant_lib.cpp
     ${BUNDLE_HOME}/sonia/utility/invokation/invokable.cpp
     ${BUNDLE_HOME}/sonia/utility/mvvm/view_model.cpp
     ${BUNDLE_HOME}/sonia/utility/mvvm/lua_view_model.cpp
