--- a/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
+++ b/projects/vs/sonia-prime-lib/sonia-prime-lib.vcxproj.filters
@@ -1761,6 +1761,50 @@
     <ClInclude Include="..\..\..\sonia\utility\zip.hpp">
       <Filter>sonia.utility</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\sonia\fibers\algo\algorithm.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\algo\round_robin.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\barrier.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\condition_variable.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\context.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\config.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\convert.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\cpu_relax.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\data.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\decay_copy.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\disable_overload.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\fss.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\futex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_status.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas_adaptive.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas_adaptive_futex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\detail\spinlock_ttas_futex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\exceptions.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\fiber.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\fixedsize_stack.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\fss.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\async.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\shared_state.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\shared_state_object.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\task_base.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\detail\task_object.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\future.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\future_status.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\packaged_task.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\future\promise.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\mutex.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\operations.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\policy.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\postponer.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\properties.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\scheduler.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\segmented_stack.hpp" />
+    <ClInclude Include="..\..\..\sonia\fibers\type.hpp" />
+    <ClInclude Include="..\..\..\sonia\utility\lua\variant_lib.hpp">
+      <Filter>sonia.utility\lua</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\sonia\logger\logger.cpp">
@@ -1972,6 +2016,19 @@
     </ClCompile>
     <ClCompile Include="..\..\..\sonia\utility\template-engine\code_element.cpp">
       <Filter>sonia.utility\template-engine</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\sonia\fibers\algo\algorithm.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\algo\round_robin.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\barrier.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\condition_variable.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\context.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\fiber.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\future.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\mutex.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\postponer.cpp" />
+    <ClCompile Include="..\..\..\sonia\fibers\scheduler.cpp" />
+    <ClCompile Include="..\..\..\sonia\utility\lua\variant_lib.cpp">
+      <Filter>sonia.utility\lua</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
